MicroRabit Microservice Architecture

--- a/MicroRabit/MicroRabit.Banking.Application/MicroRabit.Banking.Application.csproj
+++ b/MicroRabit/MicroRabit.Banking.Application/MicroRabit.Banking.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabit.Banking.Domain\MicroRabit.Banking.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
