--- a/MicroRabit/MicroRabbit.Transfer.Domain/MicroRabbit.Transfer.Domain.csproj
+++ b/MicroRabit/MicroRabbit.Transfer.Domain/MicroRabbit.Transfer.Domain.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="Events\" />
+    <Folder Include="EventHandlers\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
 </Project>
