--- a/MicroRabit/MicroRabbit.Transfer.Api/MicroRabbit.Transfer.Api.csproj
+++ b/MicroRabit/MicroRabbit.Transfer.Api/MicroRabbit.Transfer.Api.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="7.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
 </Project>
