--- a/MicroRabit/MicroRabbit.Transfer.Api/MicroRabbit.Transfer.Api.csproj
+++ b/MicroRabit/MicroRabbit.Transfer.Api/MicroRabbit.Transfer.Api.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MicroRabbit.Transfer.Data\MicroRabbit.Transfer.Data.csproj" />
+    <ProjectReference Include="..\MicroRabit.Infra.IoC\MicroRabit.Infra.IoC.csproj" />
+  </ItemGroup>
+
 </Project>
